# basilisk

./: .gitignore  README.md  pyproject.toml
basilisk/: __init__.py  __main__.py  basilisk.py  schema.py
tests/: test_basilisk.py
